--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "chart.js": "^1.1.1",
+    "cors": "^2.8.5",
+    "framer-motion": "^11.11.9",
+    "jspdf": "^2.5.2",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
